📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -18270,5 +18270,141 @@
         "published": "Wed, 17 Dec 2025 15:37:00 GMT",
         "source": "Latest news",
         "summary": "Soundcore's latest A30 sleep earbuds promise active noise cancellation in a small and lightweight form factor."
+    },
+    {
+        "id": "https://www.theverge.com/news/846367/mercedes-benz-discontinues-feature-that-syncs-music-to-driving",
+        "title": "Mercedes-Benz discontinues feature that syncs music to driving",
+        "link": "https://www.theverge.com/news/846367/mercedes-benz-discontinues-feature-that-syncs-music-to-driving",
+        "published": "2025-12-17T12:04:14-05:00",
+        "source": "The Verge",
+        "summary": "Mercedes-Benz sent out a notice to customers recently announcing its plans to discontinue MBUX Sound Drive, an interactive audio feature that syncs music to the car's actions. The feature was first announced less than a year ago at CES in partnership with Black Eyed Peas frontman Will.i.am. Notices went out recently to customers that MBUX [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/846408/dockcase-selfix-selfie-smartphone-iphone-17-pro-case-kickstarter",
+        "title": "This iPhone case with a second screen lets you snap selfies with its rear cameras",
+        "link": "https://www.theverge.com/news/846408/dockcase-selfix-selfie-smartphone-iphone-17-pro-case-kickstarter",
+        "published": "2025-12-17T12:00:39-05:00",
+        "source": "The Verge",
+        "summary": "Smartphones with secondary screens on the back aren't a new idea. Most recently the Xiaomi 17 series launched in September with a smaller rear display and while the company suggests using it for widgets or gaming, the most practical use is as a way to frame selfies captured with the phone's superior rear cameras. The [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/846425/warner-bros-discovery-board-rejection-paramount-skydance-hostile-bid",
+        "title": "Warner Bros. Discovery wants its shareholders to reject Paramount\u2019s latest offer",
+        "link": "https://www.theverge.com/entertainment/846425/warner-bros-discovery-board-rejection-paramount-skydance-hostile-bid",
+        "published": "2025-12-17T12:00:34-05:00",
+        "source": "The Verge",
+        "summary": "Though Paramount Skydance was trying to buy Warner Bros. Discovery for much more money than Netflix is offering, David Zaslav and the rest of WBD's board are urging their shareholders to give Oracle scion David Ellison the cold shoulder. Today, WBD's board announced that it has unanimously decided that its shareholders would be much better [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/846184/jimmy-wales-trusts-the-process",
+        "title": "Jimmy Wales trusts the process",
+        "link": "https://www.theverge.com/tech/846184/jimmy-wales-trusts-the-process",
+        "published": "2025-12-17T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Wikipedia will be 25 years old in January. During that time, the encyclopedia has gone from a punchline about the unreliability of online information to the factual foundation of the web. The project's status as a trusted source of facts has made it a target of authoritarian governments and powerful individuals, who are attempting to [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/trump-admin-threatens-to-break-up-major-climate-research-center/",
+        "title": "Trump admin threatens to break up major climate research center",
+        "link": "https://arstechnica.com/science/2025/12/trump-admin-threatens-to-break-up-major-climate-research-center/",
+        "published": "Wed, 17 Dec 2025 16:10:43 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Major research institution dismissed as a source of \"climate alarmism.\""
+    },
+    {
+        "id": "https://arstechnica.com/google/2025/12/google-releases-gemini-3-flash-promising-improved-intelligence-and-efficiency/",
+        "title": "Google releases Gemini 3 Flash, promising improved intelligence and efficiency",
+        "link": "https://arstechnica.com/google/2025/12/google-releases-gemini-3-flash-promising-improved-intelligence-and-efficiency/",
+        "published": "Wed, 17 Dec 2025 16:00:25 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Google's Gemini 3 family is now complete with release of Gemini 3 Flash."
+    },
+    {
+        "id": "https://www.engadget.com/deals/one-of-our-favorite-budgeting-apps-has-50-percent-off-annual-subscriptions-right-now-154056535.html?src=rss",
+        "title": "One of our favorite budgeting apps has 50 percent off annual subscriptions right now",
+        "link": "https://www.engadget.com/deals/one-of-our-favorite-budgeting-apps-has-50-percent-off-annual-subscriptions-right-now-154056535.html?src=rss",
+        "published": "Wed, 17 Dec 2025 17:05:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>With a new year just around the corner, now is the perfect time to take stock of your finances. A budgeting app can help with that, and right now you can get 50 percent off your first year of a Monarch Money plan. All you need to do is enter the code <strong>MONARCHVIP</strong> at <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=f9cd69a7-2172-4476-a391-04d87e530174&amp;featureId=text-link&amp;linkText=checkout&amp;cu"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/uber-and-doordash-challenge-nyc-law-that-encourages-tipping-163315375.html?src=rss",
+        "title": "Uber and DoorDash challenge NYC law that encourages tipping",
+        "link": "https://www.engadget.com/big-tech/uber-and-doordash-challenge-nyc-law-that-encourages-tipping-163315375.html?src=rss",
+        "published": "Wed, 17 Dec 2025 16:33:15 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Uber and DoorDash are challenging a forthcoming NYC law that encourages tipping on food-delivery apps, <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=c813ae39-7d58-41cb-ac66-ad830606ceef&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=df26240c-1a9f-4844-abc3-6cafebe4115a&amp;featureId=text-link&amp;merchantName=The+New+York+Times&amp;linkText=as+reported+by+The+New+York+Times&amp;custData=eyJzb3VyY2VOYW1lIjoiV2ViLURlc2t0b3AtVmVyaXpvbiIsImxhbmRpbmd"
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-dyson-airwrap-id-deal",
+        "title": "The very giftable Dyson Airwrap i.d. is down to its best-ever price at Amazon \u2014 save over $100",
+        "link": "https://mashable.com/article/dec-17-dyson-airwrap-id-deal",
+        "published": "Wed, 17 Dec 2025 16:43:08 +0000",
+        "source": "Mashable",
+        "summary": "The Dyson Airwrap i.d. is down to just $479 at Amazon in both the straight and curly models \u2014 its lowest price ever at 26% off."
+    },
+    {
+        "id": "https://mashable.com/article/credit-check-company-breach-5-6-customers-expose",
+        "title": "Credit check company breached, 5.6 million customers info exposed",
+        "link": "https://mashable.com/article/credit-check-company-breach-5-6-customers-expose",
+        "published": "Wed, 17 Dec 2025 16:40:53 +0000",
+        "source": "Mashable",
+        "summary": "Millions of customers had very sensitive financial information stolen in a breach of a credit check company."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-eufy-e20-3-in-1-robot-vacuum-deal",
+        "title": "This robovac that doubles as a stick vacuum is on sale for just $300 \u2014\u00a0a new record-low price",
+        "link": "https://mashable.com/article/dec-17-eufy-e20-3-in-1-robot-vacuum-deal",
+        "published": "Wed, 17 Dec 2025 16:19:36 +0000",
+        "source": "Mashable",
+        "summary": "The Eufy E20 3-in-1 Robot Vacuum is on sale for just $299.99 (or 54% off) thanks to a coupon code. It's never been cheaper."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-lego-creative-brick-box-deal",
+        "title": "This 790-piece Lego Creative Box is 47% off and arrives before Christmas",
+        "link": "https://mashable.com/article/dec-17-lego-creative-brick-box-deal",
+        "published": "Wed, 17 Dec 2025 16:16:46 +0000",
+        "source": "Mashable",
+        "summary": "Get the Lego Classic Large Creative Brick Box for just $31.59 (47% off) at Amazon. Includes 790 pieces and arrives by Christmas."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-gemini-3-flash-free-try-it/",
+        "title": "You can try Google's new Gemini 3 Flash AI model today for free - it's even in Search's AI Mode",
+        "link": "https://www.zdnet.com/article/google-gemini-3-flash-free-try-it/",
+        "published": "Wed, 17 Dec 2025 16:25:00 GMT",
+        "source": "Latest news",
+        "summary": "Designed to balance speed with power, the new model will bring a boost to many of the AI perks that Gemini users have already come to expect, like vibe coding and multimodality."
+    },
+    {
+        "id": "https://blog.google/products/gemini/gemini-3-flash/",
+        "title": "Gemini 3 Flash: frontier intelligence built for speed",
+        "link": "https://blog.google/products/gemini/gemini-3-flash/",
+        "published": "Wed, 17 Dec 2025 16:42:13 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46301851\">Comments</a>"
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46301921",
+        "title": "Tell HN: HN Was Down",
+        "link": "https://news.ycombinator.com/item?id=46301921",
+        "published": "Wed, 17 Dec 2025 16:48:18 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46301921\">Comments</a>"
+    },
+    {
+        "id": "https://amit.prasad.me/blog/sorted-data",
+        "title": "Notes on Sorted Data",
+        "link": "https://amit.prasad.me/blog/sorted-data",
+        "published": "Thu, 11 Dec 2025 16:52:31 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46233794\">Comments</a>"
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46301903",
+        "title": "Ask HN: Was HN just down for anyone else?",
+        "link": "https://news.ycombinator.com/item?id=46301903",
+        "published": "Wed, 17 Dec 2025 16:46:39 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46301903\">Comments</a>"
     }
 ]
