📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -18406,5 +18406,141 @@
         "published": "Wed, 17 Dec 2025 16:46:39 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46301903\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/facebook-is-testing-a-link-posting-limit-for-professional-accounts-and-pages/",
+        "title": "Facebook is testing a link posting limit for professional accounts and pages",
+        "link": "https://techcrunch.com/2025/12/17/facebook-is-testing-a-link-posting-limit-for-professional-accounts-and-pages/",
+        "published": "Wed, 17 Dec 2025 18:15:58 +0000",
+        "source": "TechCrunch",
+        "summary": "Meta said that the test impacts professional accounts and pages on Facebook."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/amazon-appoints-longtime-aws-exec-peter-desantis-to-lead-new-ai-org/",
+        "title": "Amazon appoints longtime AWS exec Peter DeSantis to lead new AI org",
+        "link": "https://techcrunch.com/2025/12/17/amazon-appoints-longtime-aws-exec-peter-desantis-to-lead-new-ai-org/",
+        "published": "Wed, 17 Dec 2025 18:06:29 +0000",
+        "source": "TechCrunch",
+        "summary": "DeSantis has spent 27 years at Amazon, including eight years as an SVP for AWS, the cloud provider that powers about one-third of the internet."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/rad-power-bikes-files-for-bankruptcy-and-is-looking-to-sell-the-business/",
+        "title": "Rad Power Bikes files for bankruptcy and is looking to sell the business",
+        "link": "https://techcrunch.com/2025/12/17/rad-power-bikes-files-for-bankruptcy-and-is-looking-to-sell-the-business/",
+        "published": "Wed, 17 Dec 2025 17:28:50 +0000",
+        "source": "TechCrunch",
+        "summary": "It's the latest e-bike company to seek bankruptcy protection after pandemic-era excitement for the category wore off."
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/846429/fallout-season-2-maximus-aaron-moten-interview",
+        "title": "Maximus is more important than ever in Fallout season 2",
+        "link": "https://www.theverge.com/entertainment/846429/fallout-season-2-maximus-aaron-moten-interview",
+        "published": "2025-12-17T13:02:24-05:00",
+        "source": "The Verge",
+        "summary": "As we tuck into Fallout season 2, eager to see Amazon bring New Vegas to life, there's one person who stands out - and not just because of his power armor. Knight Maximus of the Brotherhood of Steel is the most important of Fallout's three main characters, and I'm glad the new season is finally [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/846387/level-2-operational-design-domain-markey-bill",
+        "title": "Tesla would have to rein in FSD under new Democratic bill",
+        "link": "https://www.theverge.com/news/846387/level-2-operational-design-domain-markey-bill",
+        "published": "2025-12-17T13:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Tesla and other automakers working on Level 2 and higher driving systems would be required to restrict their vehicles to specific road types or clearly defined operational domains under a new bill introduced today by Massachusetts Senator Ed Markey (D). Operational design domains, or ODDs, are a set of conditions, either geographic or weather-related, in [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/ai-artificial-intelligence/845453/space-data-centers-astronomers",
+        "title": "Billionaires want data centers everywhere, including space",
+        "link": "https://www.theverge.com/ai-artificial-intelligence/845453/space-data-centers-astronomers",
+        "published": "2025-12-17T12:48:34-05:00",
+        "source": "The Verge",
+        "summary": "Tech billionaires have been obsessed with space for a long time. Now, as the largest AI companies race to build more data centers in a frenzied pursuit of profitability, space is looking less like a pet project and more like a commercial opportunity. In 2025 alone, six proposals for giant AI data centers needing multiple [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/846478/espn-monday-night-football-playbook-analytics",
+        "title": "ESPN is debuting a new data-filled Monday Night Football stream next week",
+        "link": "https://www.theverge.com/news/846478/espn-monday-night-football-playbook-analytics",
+        "published": "2025-12-17T12:35:16-05:00",
+        "source": "The Verge",
+        "summary": "A new Monday Night Football broadcast will offer an alternate telecast that presents the game live from the All-22 camera angle that shows the entire field, coupled with on-screen analytics and commentary. It's called MNF Playbook with Next Gen Stats, and it premieres next week. To develop the show, ESPN partnered with sports data analytics [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/border-patrol-bets-on-small-drones-to-expand-us-surveillance-reach/",
+        "title": "Border Patrol Bets on Small Drones to Expand US Surveillance Reach",
+        "link": "https://www.wired.com/story/border-patrol-bets-on-small-drones-to-expand-us-surveillance-reach/",
+        "published": "Wed, 17 Dec 2025 18:12:24 +0000",
+        "source": "WIRED",
+        "summary": "Federal records show CBP is moving from testing small drones to making them standard surveillance tools, expanding a network that can follow activity in real time and extend well beyond the border."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/tv-movies/the-oscars-will-exclusively-air-on-youtube-starting-in-2029-181545531.html?src=rss",
+        "title": "The Oscars will exclusively air on YouTube starting in 2029",
+        "link": "https://www.engadget.com/entertainment/tv-movies/the-oscars-will-exclusively-air-on-youtube-starting-in-2029-181545531.html?src=rss",
+        "published": "Wed, 17 Dec 2025 18:15:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The entertainment industry\u2019s most well-known awards show is heading to streaming. The Academy of Motion Picture Arts and Sciences <a class=\"link\" href=\"https://press.oscars.org/news/academy-partners-youtube-exclusive-global-rights-oscarsr-and-other-academy-content-starting\" target=\"_blank\">has announced</a> that the Oscars will exclusively air on YouTube starting in 2029. The new deal means the awards show is abandoning its long-time partnership with ABC (owned by frequent Oscar heavyweight, "
+    },
+    {
+        "id": "https://www.engadget.com/gaming/io-interactives-007-first-light-reimagines-james-bond-as-a-young-and-reckless-spy-180000758.html?src=rss",
+        "title": "IO Interactive's 007 First Light reimagines James Bond as a young and reckless spy",
+        "link": "https://www.engadget.com/gaming/io-interactives-007-first-light-reimagines-james-bond-as-a-young-and-reckless-spy-180000758.html?src=rss",
+        "published": "Wed, 17 Dec 2025 18:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The creators of the Hitman series have honed their style of- open-ended and spectacle-driven sandboxes across several games, and now they're taking their signature immersive gameplay to the world of James Bond. With 0<em>07 First Light</em>, developer IO Interactive is crafting an origin story for the globetrotting British spy, showing how he undertook daring missions at the start of his career to eventually become the world's most infamous agent.</p><p>Before the reveal at The Game Awards of"
+    },
+    {
+        "id": "https://gizmodo.com/its-gerard-butler-vs-the-post-apocalypse-in-the-fiery-new-greenland-2-migration-trailer-2000700813",
+        "title": "It\u2019s Gerard Butler vs. the Post-Apocalypse in the Fiery New \u2018Greenland 2: Migration\u2019 Trailer",
+        "link": "https://gizmodo.com/its-gerard-butler-vs-the-post-apocalypse-in-the-fiery-new-greenland-2-migration-trailer-2000700813",
+        "published": "Wed, 17 Dec 2025 17:38:40 +0000",
+        "source": "Gizmodo",
+        "summary": "He and his family survived the comet\u2014but what comes next? Find out in the sequel hitting theaters in January."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-shop-lelo-deal",
+        "title": "LELOs Cyber Monday Sale is somehow still live \u2014 last chance to save up to 50%",
+        "link": "https://mashable.com/article/dec-17-shop-lelo-deal",
+        "published": "Wed, 17 Dec 2025 17:16:56 +0000",
+        "source": "Mashable",
+        "summary": "Save up to 50% at LELO and get a free SONA 2 Travel on orders over $199. The extended Cyber Week sale ends in 20 hours."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-narwal-freo-pro-robot-vacuum-deal",
+        "title": "Snag the powerful Narwal Freo Pro robot vacuum and mop for $220 off",
+        "link": "https://mashable.com/article/dec-17-narwal-freo-pro-robot-vacuum-deal",
+        "published": "Wed, 17 Dec 2025 17:12:04 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 17, get $220 off the Narwal Freo Pro robot vacuum and mop at Amazon."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ridge-wallet-review/",
+        "title": "I was skeptical of this minimalist wallet, but this genius feature sold me",
+        "link": "https://www.zdnet.com/article/ridge-wallet-review/",
+        "published": "Wed, 17 Dec 2025 17:30:41 GMT",
+        "source": "Latest news",
+        "summary": "The Ridge Wallet lineup just became a lot more customizable."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-labs-experiment-ai-cc/",
+        "title": "Google's latest AI tool briefs you on your day like a personal assistant - for free",
+        "link": "https://www.zdnet.com/article/google-labs-experiment-ai-cc/",
+        "published": "Wed, 17 Dec 2025 17:27:21 GMT",
+        "source": "Latest news",
+        "summary": "A new tool called CC tries to help you organize the day ahead by seeing what's waiting for you in Gmail and Google Calendar."
+    },
+    {
+        "id": "https://www.finalroundai.com/blog/aws-ceo-ai-cannot-replace-junior-developers",
+        "title": "AWS CEO says replacing junior devs with AI is 'one of the dumbest ideas'",
+        "link": "https://www.finalroundai.com/blog/aws-ceo-ai-cannot-replace-junior-developers",
+        "published": "Wed, 17 Dec 2025 17:08:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46302267\">Comments</a>"
+    },
+    {
+        "id": "https://www.docker.com/blog/docker-hardened-images-for-every-developer/",
+        "title": "A Safer Container Ecosystem with Docker: Free Docker Hardened Images",
+        "link": "https://www.docker.com/blog/docker-hardened-images-for-every-developer/",
+        "published": "Wed, 17 Dec 2025 17:13:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46302337\">Comments</a>"
     }
 ]
