📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -18542,5 +18542,109 @@
         "published": "Wed, 17 Dec 2025 17:13:03 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46302337\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/cisco-says-chinese-hackers-are-exploiting-its-customers-with-a-new-zero-day/",
+        "title": "Cisco says Chinese hackers are exploiting its customers with a new zero-day",
+        "link": "https://techcrunch.com/2025/12/17/cisco-says-chinese-hackers-are-exploiting-its-customers-with-a-new-zero-day/",
+        "published": "Wed, 17 Dec 2025 18:58:30 +0000",
+        "source": "TechCrunch",
+        "summary": "Cisco said it discovered a Chinese hacking campaign targeting its customers by exploiting a zero-day in some of the company's most popular products."
+    },
+    {
+        "id": "https://www.theverge.com/ai-artificial-intelligence/846573/ai-toys-built-on-openais-chatgpt-inappropriate-content-senators-letter",
+        "title": "AI toys are telling kids how to find knives, and senators are mad",
+        "link": "https://www.theverge.com/ai-artificial-intelligence/846573/ai-toys-built-on-openais-chatgpt-inappropriate-content-senators-letter",
+        "published": "2025-12-17T14:03:31-05:00",
+        "source": "The Verge",
+        "summary": "Sexual fetish content. How to light a match. Where to find knives in the home. These are all conversation topics that recently-recalled children's toys - built atop AI chatbots like OpenAI's GPT-4o - are capable of bringing up to children. On Tuesday, U.S. senators Marsha Blackburn (R-Tenn.) and Richard Blumenthal (D-Conn.) sent a letter to [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/846560/youtube-the-oscars-streaming-2029",
+        "title": "The Oscars will stream on YouTube in 2029",
+        "link": "https://www.theverge.com/news/846560/youtube-the-oscars-streaming-2029",
+        "published": "2025-12-17T13:30:53-05:00",
+        "source": "The Verge",
+        "summary": "The Oscars are headed to YouTube - in a few years. \"Beginning in 2029, the Oscars will broadcast exclusively on YouTube for free globally and on YouTube TV in the U.S.,\" YouTube announced. YouTube's coverage will include the red carpet, behind the scenes content, and Governors Ball access. The deal runs through 2033, according to [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/the-very-best-gifts-for-dads-2025/",
+        "title": "The Very Best Gifts for Dads of Christmas 2025",
+        "link": "https://www.wired.com/story/the-very-best-gifts-for-dads-2025/",
+        "published": "Wed, 17 Dec 2025 19:03:58 +0000",
+        "source": "WIRED",
+        "summary": "Dads are traditionally tough to shop for\u2014let me help with these handpicked gift ideas for fathers with great taste."
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/the-best-stocking-stuffer-ideas-you-can-shop-for-50-or-less-130049822.html?src=rss",
+        "title": "The best stocking stuffer ideas you can shop for $50 or less",
+        "link": "https://www.engadget.com/computing/accessories/the-best-stocking-stuffer-ideas-you-can-shop-for-50-or-less-130049822.html?src=rss",
+        "published": "Wed, 17 Dec 2025 19:06:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The big ticket tech gifts may get the lion's share of attention during the holidays, but it's surprising how much people appreciate small and thoughtful accessories and gadgets. We picked out a dozen such stocking stuffers for under $50 \u2014 perfect for a little something extra for a loved one or a welcome gift for a coworker. Just be sure to check the shipping windows to make sure these handy gizmos will arrive in time. Here are some of our favorite techie gift ideas that come in at $50 or less"
+    },
+    {
+        "id": "https://gizmodo.com/x-bid-adieu-to-the-twitter-brand-but-now-its-suing-to-keep-it-2000700860",
+        "title": "X \u2018Bid Adieu\u2019 to the Twitter Brand, but Now It\u2019s Suing to Keep It",
+        "link": "https://gizmodo.com/x-bid-adieu-to-the-twitter-brand-but-now-its-suing-to-keep-it-2000700860",
+        "published": "Wed, 17 Dec 2025 19:00:59 +0000",
+        "source": "Gizmodo",
+        "summary": "Elon Musk\u2019s company is suing a startup that wants to resurrect Twitter, claiming it never gave up the brand."
+    },
+    {
+        "id": "https://gizmodo.com/gemini-didnt-make-my-old-ass-smart-speaker-feel-any-less-dumb-2000700763",
+        "title": "Gemini Didn\u2019t Make My Old-Ass Smart Speaker Feel Any Less Dumb",
+        "link": "https://gizmodo.com/gemini-didnt-make-my-old-ass-smart-speaker-feel-any-less-dumb-2000700763",
+        "published": "Wed, 17 Dec 2025 18:47:54 +0000",
+        "source": "Gizmodo",
+        "summary": "Gemini for Home has its perks, but I don't know that free users will feel the \"next-gen\" of it all compared with the old Google Assistant."
+    },
+    {
+        "id": "https://gizmodo.com/oscars-streaming-youtube-2029-2000700856",
+        "title": "Disney Loses the Oscars to the Home of MrBeast and \u2018Hot Ones\u2019",
+        "link": "https://gizmodo.com/oscars-streaming-youtube-2029-2000700856",
+        "published": "Wed, 17 Dec 2025 18:30:58 +0000",
+        "source": "Gizmodo",
+        "summary": "YouTube will stream the Super Bowl of the movies starting in 2029."
+    },
+    {
+        "id": "https://mashable.com/article/texas-ag-samsung-tcl-hisense-tv-screenshot-privacy",
+        "title": "TV makers take screenshots of what we watch, says Texas AG",
+        "link": "https://mashable.com/article/texas-ag-samsung-tcl-hisense-tv-screenshot-privacy",
+        "published": "Wed, 17 Dec 2025 17:55:26 +0000",
+        "source": "Mashable",
+        "summary": "The Texas attorney general is suing various TV manufacturers for allegedly monitoring what users watch."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-nothing-cmf-watch-3-pro-deal",
+        "title": "The CMF Watch 3 Pro \u2014\u00a0one of the best smartwatches of 2025 \u2014\u00a0just hit a new record-low price",
+        "link": "https://mashable.com/article/dec-17-nothing-cmf-watch-3-pro-deal",
+        "published": "Wed, 17 Dec 2025 17:48:53 +0000",
+        "source": "Mashable",
+        "summary": "The CMF Watch 3 Pro by Nothing is down to $78.90 at Amazon, marking a new best price ever at 20% off."
+    },
+    {
+        "id": "https://www.zdnet.com/article/comcast-xfinity-new-tv-plans-no-contract-hidden-fees/",
+        "title": "Comcast's new TV plans have no contracts and hidden fees - here's how they work",
+        "link": "https://www.zdnet.com/article/comcast-xfinity-new-tv-plans-no-contract-hidden-fees/",
+        "published": "Wed, 17 Dec 2025 18:44:00 GMT",
+        "source": "Latest news",
+        "summary": "The latest Xfinity TV plans keep it simple with one up-front pricing - no equipment rental charges included."
+    },
+    {
+        "id": "https://www.zdnet.com/article/aurzen-d1r-cube-roku-tv-projector-review/",
+        "title": "I replaced my bedroom TV with this $170 Roku projector and don't regret it",
+        "link": "https://www.zdnet.com/article/aurzen-d1r-cube-roku-tv-projector-review/",
+        "published": "Wed, 17 Dec 2025 18:37:00 GMT",
+        "source": "Latest news",
+        "summary": "The Aurzen D1R Cube Roku TV projector is fast, bright, and surprisingly fun. It's 38% off for a limited time."
+    },
+    {
+        "id": "https://sqlite.org/testing.html",
+        "title": "How SQLite Is Tested",
+        "link": "https://sqlite.org/testing.html",
+        "published": "Wed, 17 Dec 2025 18:15:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46303277\">Comments</a>"
     }
 ]
